# congress-prep

./: LICENSE  README.md  pyproject.toml
bulk_download/: download-and-sync-with-log.sh  download.sh  sync.sh
congress_prep/: 01_populate_postgres.py  01_xml_scrape_to_local.py  02_bill_status_parsed_to_local.py  02_upload_base_hf.py  03_make_llm_text_hfds.py  03_unified_to_local.py  04_chunking_to_local.py  bill_status_mod.py  bill_status_parsed_to_hf.py  chroma_mod.py  chunking_mod.py  dump_to_sqlite.py  embedding_mod.py  join_bs_tv_xml.py  orm_mod.py  pinecone_mod.py  raw_scrape_to_hf.py  sqla.py  textversions_mod.py  unified_to_hf.py  upload_hf.py  upload_nomic_to_hf.py  utils.py  xml_scrape_to_hf.py
examples/: duckdb_dataset.py  nomic_atlas_api.py  requests_dataset.py
nomic/: upload_map.py  upload_text_chunks.py  upload_vecs.py  upload_voteview.py
scripts/: test_chroma.py  test_hf_ds.py  test_openai.py  test_pq.py
skypilot/: congress-scraper.yaml  test.yaml
skypilot/sky_workdir/: config.yml
