[tool.poetry]
name = "congress_prep"
version = "0.1.0"
description = ""
authors = ["Gabriel Altay"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
skypilot = {extras = ["aws"], version = "^0.4.1"}
huggingface-hub = "^0.20.3"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
rich = "^13.7.0"
pydantic = "^2.6.1"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"
datasets = "^2.17.0"
langchain = "^0.1.6"
sentence-transformers = "^2.3.1"
chromadb = "^0.4.22"
scikit-learn = "^1.4.0"
langchain-openai = "^0.0.5"
nomic = "^3.0.9"
duckdb = "^0.10.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

